Handle multiple languages