@@ -17,6 +17,9 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+import java.util.List;
+
 import static org.springframework.http.HttpMethod.*;
 
 @Configuration
@@ -30,39 +33,88 @@ public class WebSecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
-        httpSecurity.csrf(AbstractHttpConfigurer::disable)
-                .addFilterBefore(jwtTokenFilter, UsernamePasswordAuthenticationFilter.class)
-                .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers(buildPath("users/register"), buildPath("users/login")).permitAll()
-                        .requestMatchers(GET, buildPath("categories**")).hasAnyRole(Role.USER, Role.ADMIN)
-                        .requestMatchers(POST, buildPath("categories/**")).hasRole(Role.ADMIN)
-                        .requestMatchers(PUT, buildPath("categories/**")).hasRole(Role.ADMIN)
-                        .requestMatchers(DELETE, buildPath("categories/**")).hasRole(Role.ADMIN)
-                        .requestMatchers(GET, buildPath("products**")).hasAnyRole(Role.USER, Role.ADMIN)
-                        .requestMatchers(POST, buildPath("products/**")).hasRole(Role.ADMIN)
-                        .requestMatchers(PUT, buildPath("products/**")).hasRole(Role.ADMIN)
-                        .requestMatchers(DELETE, buildPath("products/**")).hasRole(Role.ADMIN)
-                        .requestMatchers(POST, buildPath("orders/**")).hasAnyRole(Role.USER)
-                        .requestMatchers(GET, buildPath("orders/**")).hasAnyRole(Role.USER, Role.ADMIN)
-                        .requestMatchers(PUT, buildPath("orders/**")).hasRole(Role.ADMIN)
-                        .requestMatchers(DELETE, buildPath("orders/**")).hasRole(Role.ADMIN)
-                        .requestMatchers(POST, buildPath("order_details/**")).hasAnyRole(Role.USER)
-                        .requestMatchers(GET, buildPath("order_details/**")).hasAnyRole(Role.USER, Role.ADMIN)
-                        .requestMatchers(PUT, buildPath("order_details/**")).hasRole(Role.ADMIN)
-                        .requestMatchers(DELETE, buildPath("order_details/**")).hasRole(Role.ADMIN)
-                        .anyRequest().authenticated()
-                );
+        httpSecurity.addFilterBefore(jwtTokenFilter, UsernamePasswordAuthenticationFilter.class)
+                .authorizeHttpRequests(requests -> {
+                    requests
+                            .requestMatchers(
+                                    String.format("%s/users/register", apiPrefix),
+                                    String.format("%s/users/login", apiPrefix)
+                            )
+                            .permitAll()
+
+                            .requestMatchers(GET,
+                                    String.format("%s/roles**", apiPrefix)).permitAll()
+
+                            .requestMatchers(GET,
+                                    String.format("%s/categories**", apiPrefix)).permitAll()
+
+                            .requestMatchers(POST,
+                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+
+                            .requestMatchers(PUT,
+                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+
+                            .requestMatchers(DELETE,
+                                    String.format("%s/categories/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+
+                            .requestMatchers(GET,
+                                    String.format("%s/products**", apiPrefix)).permitAll()
+
+                            .requestMatchers(GET,
+                                    String.format("%s/products/images/*", apiPrefix)).permitAll()
+
+                            .requestMatchers(POST,
+                                    String.format("%s/products**", apiPrefix)).hasAnyRole(Role.ADMIN)
+
+                            .requestMatchers(PUT,
+                                    String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+
+                            .requestMatchers(DELETE,
+                                    String.format("%s/products/**", apiPrefix)).hasAnyRole(Role.ADMIN)
+
+
+                            .requestMatchers(POST,
+                                    String.format("%s/orders/**", apiPrefix)).hasAnyRole(Role.USER)
+
+                            .requestMatchers(GET,
+                                    String.format("%s/orders/**", apiPrefix)).permitAll()
+
+                            .requestMatchers(PUT,
+                                    String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
+
+                            .requestMatchers(DELETE,
+                                    String.format("%s/orders/**", apiPrefix)).hasRole(Role.ADMIN)
+
+                            .requestMatchers(POST,
+                                    String.format("%s/order_details/**", apiPrefix)).hasAnyRole(Role.USER)
+
+                            .requestMatchers(GET,
+                                    String.format("%s/order_details/**", apiPrefix)).permitAll()
+
+                            .requestMatchers(PUT,
+                                    String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
+
+                            .requestMatchers(DELETE,
+                                    String.format("%s/order_details/**", apiPrefix)).hasRole(Role.ADMIN)
+
+
+                            .anyRequest().authenticated();
+                    //.anyRequest().permitAll();
+
+                })
+                .csrf(AbstractHttpConfigurer::disable);
         httpSecurity.cors(new Customizer<CorsConfigurer<HttpSecurity>>() {
             @Override
             public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
-                CorsConfiguration configuration=new CorsConfiguration();
-                configuration.setAllowedOrigins(java.util.List.of("*"));
-                configuration.setAllowedMethods(java.util.List.of("GET", "POST", "PUT", "DELETE","OPTIONS"));
-                configuration.setAllowedHeaders(java.util.List.of("authorization", "content-type","x-auth-token"));
+                CorsConfiguration configuration = new CorsConfiguration();
+                configuration.setAllowedOrigins(List.of("*"));
+                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+                configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
+                configuration.setExposedHeaders(List.of("x-auth-token"));
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                 source.registerCorsConfiguration("/**", configuration);
                 httpSecurityCorsConfigurer.configurationSource(source);
-                };
+            }
         });
         return httpSecurity.build();
     }
